@@ -14,7 +14,7 @@ module ActiveMerchant #:nodoc:
       # The application making the calls to the gateway
       # Useful for things like the PayPal build notation id fields
       mattr_accessor :application_id
-      self.application_id = 'ActiveMerchant - activemerchant.org'
+      self.application_id = 'ActiveMerchant'
       
       # Set both the mode of both the gateways and integrations
       # at once
