@@ -123,7 +123,7 @@ module ActiveMerchant #:nodoc:
           xml.tag! 'Token', options[:token] unless options[:token].blank?
           xml.tag! 'NoShipping', options[:no_shipping] ? '1' : '0'
           xml.tag! 'AddressOverride', options[:address_override] ? '1' : '0'
-          xml.tag! 'ButtonSource', Base.application_id unless Base.application_id.blank? 
+          xml.tag! 'ButtonSource', Base.application_id.to_s.slice(0,32) unless Base.application_id.blank? 
         end
       end
       
