@@ -96,7 +96,7 @@ class PaypalExpressTest < Test::Unit::TestCase
   
   def test_button_source
     xml = REXML::Document.new(@gateway.send(:build_sale_or_authorization_request, 'Test', 100, {}))
-    assert_equal 'ActiveMerchant - activemerchant.org', REXML::XPath.first(xml, '//n2:ButtonSource').text
+    assert_equal 'ActiveMerchant', REXML::XPath.first(xml, '//n2:ButtonSource').text
   end
   
   def successful_details_response
